@@ -925,3 +925,4 @@
 2010-05-28
 	* src/libcpuarch/processor.c: stage time measures removed. A profiler tool like
 		'gprof' should be used for this purpose.
+	* src/libcpuarch: names of files implementing stages changed.
